# neuroevolutionary-joint-action

./: .gitignore  CMakeLists.txt  HARDWARE-SETUP.md  HARDWARE.md  README.md  controller_diagnostics.sh  directed-perception-pan-tilt.md  hardware.md  lbr_a2_error.md  package.xml  zed-2i.md
bringup_py/: gazebo.py
data/: solution 120002 generation 121 species 1340 fitness 0.961601.json  solution 15233 generation 32 species 2 fitness 0.950102.json  solution 30007 generation 31 species 5 fitness 0.973616.json  solution 31407 generation 64 species 18 fitness 0.951304.json  solution 99514 generation 200 species 770 fitness 0.896474.json
launch/: dnf_control_architecture.launch.py  high_level_control_node.launch.py  joint_control.launch.py  low_level_control_node.launch.py  marlab_gazebo.launch.py  marlab_hardware.launch.py  marlab_kuka.launch.py  marlab_kuka_env.launch.py  marlab_kuka_move_group_env.launch.py  mock_pick_place.launch.py  mock_pick_place_joint_control.launch.py  moveit2_control.launch.py
launch/tests/: cartesian_path_planning.launch.py  find_object_poses.launch.py  onrobot_rg2_control.launch.py  state_logger.launch.py
models/kuka_pedestal/: model.config  model.sdf
models/marlab/: model.config  model.sdf
models/marlab/meshes/: chair.stl  door.stl  door_frame.stl  door_handles.stl  door_windows.stl  floor.stl  monitor.stl  tables.stl  wall_window_panes.stl  walls.stl  window_frames.stl  window_panes.stl
msg/: SceneObject.msg  SceneObjects.msg
resources/docs/: PTU_README.md
resources/documentation/: detailed-setup.md  directed-perception-pan-tilt-unit.md  kuka-lbr-iiwa-onrobot.md  quick-start-guide.md  zed-2i-capture.md
src/: README.md  dnf_control_architecture.cpp  high_level_control_node.cpp  joint_control_demo.cpp  low_level_control_node.cpp  mock_pick_place.cpp  mock_pick_place_joint_control.cpp  mock_pick_place_joint_control_backup.cpp  moveit2_control_demo.cpp  vision_processing_node.py
src/controlled_scenarios/: anticipatory_action.cpp  anticipatory_assistance.cpp  collaborative_assistance.cpp  collaborative_preference_action.cpp  independent_action.cpp
src/deprecated/: high_level_control_node.cpp  low_level_control_node(joint_control).cpp  low_level_control_node.cpp
src/tests/: cartesian_path_planning.cpp  find_object_poses.cpp  joint_control.cpp  onrobot_rg2_control.cpp  state_logger.cpp
src/tests/zed-2i/left_arm/: zed_count_red_green.py  zed_hand_tracking.py  zed_line_centers_console.py  zed_line_count.py  zed_online.py  zed_preview.py  zed_record.py
src/tests/zed-2i/right_arm/: zed_crop.py  zed_line_centers.py
worlds/: README.md  marlab.sdf  marlab_light.sdf
